Fix logo on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -795,9 +795,9 @@ header .logo a {
 		padding: 6px 0;
 	}
 	header .logo a {
-		width: 38px;
-		height: 38px;
-		background-size: 38px 38px;
+		width: 124px;
+		height: 30x;
+		background-size: 124px 30px;
 	}
 }
 
